--- a/functions/views/admin_edit_work.ejs
+++ b/functions/views/admin_edit_work.ejs
@@ -20,6 +20,9 @@
         margin-bottom: 10px;
     }
 
+
+   
+
 </style>
 
 <body id="page-top">
@@ -77,7 +80,7 @@
                                 <% } %>
                             </td>
                             <td>
-                                <a class="btn btn-success btn-sm" href="#tambahModal" data-toggle="modal" data-action="edit" data-child-id="<%= isi.key %>"><span class="fa fa-plus"></span></a>                                                                    
+                                <a class="btn btn-success btn-sm" href="#tambahModal" data-toggle="modal" data-action="edit" data-child-id="<%= isi.key %>"><span class="fa fa-plus"></span> Tambah Gambar</a>                                                                    
                                 <% if (extra) {%>
                                 <br> <br>  
                                                      
@@ -85,11 +88,12 @@
                                     <% Object.keys(extra).forEach(function(key) { var val = extra[key];%>
                                     
                                         <% if (val.foto !== "") {%>
-                                            <img  alt="<%= val.foto %>" href="#editModal" data-toggle="modal" data-child-id="<%= isi.key %>" data-tambahan-id="<%= key %>" class="img-thumbnail foto-preview" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= isi.key %>%2F<%= val.foto %>?alt=media">
-                                            <br>
+                                            <img  alt="<%= val.foto %>" class="mt-1 img-thumbnail foto-preview" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= isi.key %>%2F<%= val.foto %>?alt=media">                                                                                        
                                         <% } else {%>
                                             <p>Tidak Ada Foto</p>
-                                        <% } %>
+                                        <% } %>                     
+                                        <a class="ml-1 btn btn-warning btn-sm"  href="#editModal" data-toggle="modal" data-child-id="<%= isi.key %>" data-tambahan-id="<%= key %>">Edit / Hapus</a>                                                                            
+                                        <br>
                                     <%});%>
                                 <% } %>
                             </td>
@@ -212,11 +216,12 @@
                 <br>
                 <input type="file" accept="image/*" id="gambar3" placeholder="Pilih Foto" onchange="previewImage3();">                        
             </div>
+            <button id="hapusBtn"  type="button" class="btn btn-danger">Hapus Gambar dan Deskripsi</button>
            
         </div>
         <div class="modal-footer">
           
-            <button id="konfirmasi3"  type="button" class="btn btn-primary">Konfirmasi</button>
+            <button id="konfirmasi3"  type="button" class="btn btn-primary">Edit</button>
             <button data-dismiss="modal" type="button" class="btn btn-default">Batal</button>
           
         </div>
@@ -542,6 +547,7 @@
             let newImg = $(e.currentTarget).find('input[id="gambar3"]');
             let imgPreview = $(e.currentTarget).find('img[id="image-preview3"]');
             let konfirmasiBtn = $(e.currentTarget).find('button[id="konfirmasi3"]');
+            let hapusBtn = $(e.currentTarget).find('button[id="hapusBtn"]');
            
             let uploaderProg = $(e.currentTarget).find('progress[id="uploader3"]');
 
@@ -562,6 +568,31 @@
                 let filePath = newImg.val(); 
                 typeFoto = filePath.substr(filePath.lastIndexOf('.')+1,filePath.length);
                
+            });
+
+            hapusBtn.click(function(){
+                db.ref('/work/'+dataId+'/tambahan/'+tambahanId).remove().then(function(error){
+                        if(error){
+                            alert('terjadi kesalahan');
+                        }else{
+
+                            let storageRef = storage.ref('work/'+dataId+'/'+namaFoto);
+                            storageRef.delete().then(function() {
+
+                                alert('Data berhasil dihapus !');  
+                                 
+                                location.href="/admin_edit_work"                                                    
+                            
+                            }).catch(function(error) {
+                                alert('Terjadi Kesalahan !');                        
+                            })
+                        }
+                       
+                        
+                        
+                    });  
+                
+                   
             });
 
             
