--- a/functions/views/funwork.ejs
+++ b/functions/views/funwork.ejs
@@ -46,17 +46,19 @@
                     <%  funwork.forEach(function(isi) { var data = isi.val(); %>
                     <div class="row pt-5">
                         <div class="col-md-8">
-                                <% if (data.foto !== "") { %>
+                                <% console.log(data.foto); if (data.foto) { %>
                                     <div id="<%= isi.key %>" class="carousel slide" data-ride="carousel">
                                        
                                         <div class="carousel-inner">
-                                            <% for(var i in data.foto) { var obj = data.foto[i]; if (obj !== undefined){ %>
+                                            <% var imgnum = 0; for(var i in data.foto) { var obj = data.foto[i]; if (obj !== undefined){ %>
                                     
-                                                <div class="carousel-item<% if (i === '0') { %> active <% } %>">
+                                                <div class="carousel-item<% if (imgnum === 0) { %> active <% } %>">
                                                     <img alt="<%= obj %>" class="img-responsive center-block" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F<%= isi.key %>%2F<%= obj %>?alt=media">
                                                 </div>
                                                 
-                                            <% }} %>
+                                            <% 
+                                        }imgnum++; 
+                                    } %>
                                             
                                            
                                         </div>
