--- a/functions/views/about.ejs
+++ b/functions/views/about.ejs
@@ -13,7 +13,7 @@
 <!-- Header Section -->
 <%- include('templates/header'); -%>
 <!-- Header Section End -->
-
+<section class="content"> 
         <!-- Content Section -->
         <div class="container-fluid bg-light my-4">
             <div class="row bgbg pt-3 row">    
@@ -49,6 +49,7 @@
                 </div>      
             </div>
         </div>
+    </section>
         <!-- Content End -->
 
         <!-- Footer Section -->
