--- a/functions/views/workdetail.ejs
+++ b/functions/views/workdetail.ejs
@@ -12,7 +12,7 @@
 <!-- Header Section -->
 <%- include('templates/header'); -%>
 <!-- Header Section End -->
-
+<section class="content"> 
          <!-- Content Section -->
          <div class="container-fluid bg-light pb-5 my-4">
                 <div class="container">
@@ -51,7 +51,7 @@
                 </div>
         </div>
             <!-- Content End -->
-
+</section>
         <!-- Footer Section -->
         <%- include('templates/footer'); -%>
         <!-- Footer End -->
