--- a/functions/views/contact.ejs
+++ b/functions/views/contact.ejs
@@ -14,7 +14,7 @@
 <%- include('templates/header'); -%>
 <!-- Header Section End -->
 
-
+<section class="content"> 
         <!-- Content Section -->
         <div class="container-fluid bg-light my-4">
             <div class="row bgbg pt-3">    
@@ -29,6 +29,7 @@
             <div class="col-md-12 pb-5"></div>
             <div class="col-md-12 pb-5"></div>
         </div>
+    </section>
         <!-- Content Section End -->
 
         <!-- Footer Section -->
