--- a/functions/views/funwork.ejs
+++ b/functions/views/funwork.ejs
@@ -38,6 +38,7 @@
 <%- include('templates/header'); -%>
 <!-- Header Section End -->
          <!-- Content Section -->
+         <section class="content"> 
          <div class="container-fluid bg-light pb-5 my-4">
                 <div class="container">
     
@@ -88,7 +89,7 @@
                 </div>
             </div>
             <!-- Content End -->
-
+        </section>
         <!-- Footer Section -->
         <%- include('templates/footer'); -%>
         <!-- Footer End -->
