--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -14,50 +14,52 @@
 <%- include('templates/header'); -%>
 <!-- Header Section End -->
     
-    
-<!-- Body Section -->
-    <div class="container-fluid bg-light my-4">
+   <section class="content">
+        <div class="container-fluid bg-light my-4">
 
-        <div class="text-center text-lg-left contents">
-
-            <%  recent.forEach(function(isi) { var data = isi.val(); %>
-            <div class="row">
-                 
-                <div class="col-12 mb-0 homegambar nopadding">                   
-                    <a href="/workdetail/<%= isi.key %>">
-                        <img class="img-fluid img-responsive gmbr" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= isi.key %>%2F<%= data.foto %>?alt=media" alt="<%= data.nama %>">
-                    
-                        <div class="overlay">
-                            <h3 class="text ml-2"><%= data.nama %></h3>
+                <div class="text-center text-lg-left contents">
+        
+                    <%  recent.forEach(function(isi) { var data = isi.val(); %>
+                    <div class="row">
+                         
+                        <div class="col-12 mb-0 homegambar nopadding">                   
+                            <a href="/workdetail/<%= isi.key %>">
+                                <img class="img-fluid img-responsive gmbr" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= isi.key %>%2F<%= data.foto %>?alt=media" alt="<%= data.nama %>">
+                            
+                                <div class="overlay">
+                                    <h3 class="text ml-2"><%= data.nama %></h3>
+                                </div>
+                            </a>
                         </div>
-                    </a>
+                              
+                    </div>
+                    <%  }); %>
+                    
+                    <!-- <div class="row">
+                            <div class="nopadding grid">
+                                    <figure class="effect-zoe mb-0">
+                                        <a href="workdetail.html" class="d-block h-100">
+                                            <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                                            <figcaption>
+                                            <div class="homepg col-md-12 pb-3 pt-3">
+                                                <h3 class="" href="#">Qahwa Gayo</h3>
+                                            </div>
+                                            </figcaption>
+                                        </a>
+                                    </figure>
+                                </div>
+                    </div> -->
+                   
+                         <div class="row">
+                                <a class="text-center viewm col-md-12 mt-4 mb-4" href="/work">View More</a>
+                         </div>
+                            
                 </div>
-                      
+        
             </div>
-            <%  }); %>
-            
-            <!-- <div class="row">
-                    <div class="nopadding grid">
-                            <figure class="effect-zoe mb-0">
-                                <a href="workdetail.html" class="d-block h-100">
-                                    <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                                    <figcaption>
-                                    <div class="homepg col-md-12 pb-3 pt-3">
-                                        <h3 class="" href="#">Qahwa Gayo</h3>
-                                    </div>
-                                    </figcaption>
-                                </a>
-                            </figure>
-                        </div>
-            </div> -->
-           
-                 <div class="row">
-                        <a class="text-center viewm col-md-12 mt-4 mb-4" href="/work">View More</a>
-                 </div>
-                    
-        </div>
-
-    </div>
+   </section> 
+<!-- Body Section -->
+    
 <!-- Body Section End -->
 
 <!-- Footer Section -->
