--- a/functions/views/work.ejs
+++ b/functions/views/work.ejs
@@ -13,7 +13,7 @@
 <!-- Header Section -->
 <%- include('templates/header'); -%>
 <!-- Header Section End -->
-
+<section class="content"> 
          <!-- Content Section -->
          <div class="container-fluid pt-5 pb-5 bg-light my-4">
                 <div class="row text-center text-lg-left px-5">
@@ -39,6 +39,7 @@
                 </div>
     
             </div>
+        </section>
             <!-- Content End -->
 
        <!-- Footer Section -->
