--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2467,9 +2467,7 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 } 
 
 
-.logo{
-  max-width: 250;
-}  
+
 
 
 .limit-icon-width{
@@ -2492,29 +2490,68 @@ figure.effect-zoe:hover p.icon-links a:first-child {
     overflow: hidden;
     background-color: #FFF;
   }
-  
-  .sticky {
+
+  header {
+    position: fixed;
+    top: 0px;
+    padding: 30px 20px;
+    -webkit-transition: padding 400ms ease;
+    transition: padding 400ms ease;
+  }
+
+  section.content {
+    margin-top: 150px;
+  }
+  header.sticky {
+    padding: 10px 20px;
+  }  
+  /* .sticky {
     position: fixed;
     top: 0;
     width: 100%;
     
     
+  }*/
+  .logo{
+    width: 250px;
+    height: auto;
+    webkit-transition:all 400ms linear;
+    -moz-transition:all 400ms linear;
+    -o-transition:all 400ms linear;
+    -ms-transition:all 400ms linear;    
+    transition:all 400ms linear;
+   
+  }  
+   .sticky .logo {
+    position: fixed;
+    top : 0;
+    left : 0;
+    
+    
+    padding: 30px;
+    background-color: #FFF;
+    
+    margin-top: 10px;
+    margin-left: 10px;
+    
+    
+  }
+  @keyframes move {
+    0%{
+      top:0; left:0;
+    }
+    100% {
+      transform:  translate(20px, 20px);
+    }
   }
   
-  .sticky .logo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #FFF;
-    transition: top 0.5s;
-  }
   
   .logoimg{
       max-width: 300px;
-  }
+  } 
   
   
   
-  .sticky + .content {
+  /* .sticky + .content {
     padding-top: 60px;
-  }
+  } */ 
